<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CSE Notes</string>
    <string name="_1st_semester">1st Semester</string>
    <string name="_2nd_semester">2nd Semester</string>
    <string name="contribute">Contribute</string>
    <string name="your_suggestion_and_contributions_are_appreciated">Your suggestion and contributions are appreciated.</string>
    <string name="workshop">Workshop</string>
    <string name="pps">Pps</string>
    <string name="english">English</string>
    <string name="physics">Physics</string>
    <string name="egd">Egd</string>
    <string name="bee">Bee</string>
    <string name="chemistry">Chemistry</string>
    <string name="mathematics">Mathematics</string>
    <string name="flat">Flat</string>
    <string name="se">SE</string>
    <string name="dbms">DBMS</string>
    <string name="wt">WT</string>
    <string name="erp">ERP</string>
    <string name="coi">COI</string>
    <string name="ai">AI</string>
    <string name="cc">CC</string>
    <string name="cd">CD</string>
    <string name="mad">MAD</string>
    <string name="ml">ML</string>
    <string name="wc">WC</string>
    <string name="notes">Notes</string>
    <string name="unit_1">Unit 1</string>
    <string name="unit_2">Unit 2</string>
    <string name="unit_3">Unit 3</string>
    <string name="unit_4">Unit 4</string>
    <string name="Sem1Mathsbooks">Books</string>
    <string name="Sem1Maths_matrices">Matrices</string>
    <string name="Sem1Maths_vector_space">Vector Space</string>
    <string name="Sem2Maths_book">Book</string>
    <string name="measure_of_dispersion">Measure Of Dispersion</string>
    <string name="correlation">Correlation</string>
    <string name="probability">Probability</string>
    <string name="measure_of_central_tendancy" tools:ignore="Typos">Measure of Central Tendancy</string>
    <string name="random_variable">Random Variable</string>
    <string name="measure_of_skewnness_and_kurtosis">Measure Of Skewnness And Kurtosis</string>
    <string name="poission_distribution">Poission Distribution</string>
    <string name="normal_distribution">Normal Distribution</string>
    <string name="expectation_of_random_variable">Expectation Of Random Variable</string>
    <string name="curve_fitting_and_principal_of_least_square">Curve Fitting And Principal Of Least Square</string>
    <string name="linear_regression_analysis">Linear Regression Analysis</string>
    <string name="large_sample_test">Large Sample Test</string>
    <string name="small_sample_test">Small Sample Test</string>
    <string name="sampling">Sampling</string>
    <string name="binomial_distribution">Binomial Distribution</string>
    <string name="statistical_table">Statistical Table</string>
    <string name="Sem2Chem_book">Book</string>
    <string name="Sem2Chem_chapter_4">Chapter 4</string>
    <string name="Sem2Chem_chapter_3">Chapter 3</string>
    <string name="Sem2Chem_chapter_8">Chapter 8</string>
    <string name="Sem2Chem_chapter_1">Chapter 1</string>
    <string name="Sem2Chem_chapter_5">Chapter 5</string>
    <string name="Sem2Chem_chapter_9">Chapter 9</string>
    <string name="Sem2Chem_chapter_6">Chapter 6</string>
    <string name="Sem2Chem_chapter_7">Chapter 7</string>
    <string name="Sem2Chem_chapter_2">Chapter 2</string>
    <string name="Sem2Eng_notes">Notes</string>
    <string name="Sem2Eng_file">File</string>
    <string name="Sem2Eng_question_bank">Question Bank</string>
    <string name="Sem2Pps_book">Book</string>
    <string name="Sem2Pps_file">File</string>
    <string name="Sem2Workshop_file">File</string>
    <string name="Sem2Workshop_important_questions">Important Questions</string>
    <string name="Semester">Semester</string>
    <string name="Semester1" tools:ignore="Typos">Semester1</string>
    <string name="Semester2">Semester2</string>
    <string name="Semester3">Semester3</string>
    <string name="Semester4">Semester4</string>
    <string name="Semester5">Semester5</string>
    <string name="Semester6">Semester6</string>
    <string name="Youtube">YouTube</string>
    <string name="Contribute">Contribute</string>
    <string name="Upload">Upload</string>
    <string name="Share">Share</string>
    <string name="AboutUs">About Us</string>
    <string name="RateUs">Rate Us</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="First_Semester">1 Semester</string>
    <string name="Second_Semester">2 Semester</string>
    <string name="Third_Semester">3 Semester</string>
    <string name="Fourth_Semester">4 Semester</string>
    <string name="Fifth_Semester">5 Semester</string>
    <string name="Sixth_Semester">6 Semester</string>
    <string name="teacher_notes">Teacher Notes</string>
    <string name="book">Books</string>
    <string name="question_bank">Question Bank</string>
    <string name="maths_books_m1" tools:ignore="ExtraTranslation">Mathematics Books (M1)</string>
    <string name="maths_books_m2" tools:ignore="ExtraTranslation">Mathematics Books (M2)</string>
    <string name="chemistry_books">Chemistry Books</string>
    <string name="dos">Dos</string>
    <string name="de">De</string>
    <string name="oops">Oops</string>
    <string name="dsa">Dsa</string>
    <string name="daa">Daa</string>
    <string name="os">Os</string>
    <string name="coa">Coa</string>
    <string name="uhv">Uhv</string>
    <string name="evs">Evs</string>
    <string name="cn">Cn</string>
    <string name="social_media">Social Media</string>
    <string name="Instagram">Instagram</string>

    <string name="module_1">Module 1</string>
    <string name="module_2">Module 2</string>
    <string name="module_3">Module 3</string>
    <string name="module_4">Module 4</string>
    <string name="module_5">Module 5</string>
    <string name="module_6">Module 6</string>
    <string name="formula">Formulas</string>
    <string name="solvedQP">Solved QP</string>
    <string name="ppts">PPTs</string>
    <string name="lords">Lords</string>
    <string name="complete_notes">Complete Notes</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_page_main_line">By signing, you agree to our\n <u>Terms and Conditions</u> and <u>Privacy policy</u></string>
    <string name="email">E-Mail Address</string>
    <string name="email_hint">Enter E-Mail Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter Name</string>
    <string name="Logout">Logout</string>
    <string name="image">Image</string>
    <string name="from">from</string>
    <string name="my_name">Shiv Chauhan</string>
    <string name="contribute_page_description">You can contribute by clicking on the Button below. Thanks for your Contribution!!</string>
    <string name="shiv_chauhan">Shiv Chauhan</string>
    <string name="developer">Developer</string>
    <string name="developer_picture">Developer Picture</string>
    <string name="developer_description">Hi, hope you find this application helpful in your academics. Also help other by sharing it in whatsapp groups.\n\nAlso you can follow me on social media platforms:</string>
    <string name="linkedin">LinkedIn</string>
</resources>