<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCECF"
    tools:context=".Sem2ChemBook">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button

                android:id="@+id/ch1"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"


                android:foregroundGravity="center_vertical|center|center_horizontal"

                android:gravity="center|center_horizontal|center_vertical"

                android:text="@string/Sem2Chem_chapter_1"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,UsingOnClickInXml" />


            <Button

                android:id="@+id/ch2"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_2"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch3"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_3"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch4"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_4"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch5"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_5"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch6"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_6"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch7"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_7"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch8"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:layout_marginBottom="15dp"

                android:text="@string/Sem2Chem_chapter_8"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/ch9"
                android:layout_width="225dp"
                android:layout_height="60dp"


                android:layout_marginStart="90dp"
                android:layout_marginBottom="90dp"

                android:text="@string/Sem2Chem_chapter_9"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>