<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCECF"
    tools:context=".Sem2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="15dp"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"


                android:onClick="openSem2Maths"
                android:text="@string/mathematics"
                android:textColor="#040303"
                android:textSize="20sp"
                app:backgroundTint="#25BD9A"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,UsingOnClickInXml" />

            <Button
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="15dp"


                android:onClick="openSem2Chemistry"
                android:text="@string/chemistry"
                android:textColor="#040303"
                android:textSize="20sp"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="15dp"


                android:onClick="openSem2English"
                android:text="@string/english"
                android:textColor="#040303"
                android:textSize="20sp"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="15dp"


                android:onClick="openSem2Pps"
                android:text="@string/pps"
                android:textColor="#040303"
                android:textSize="20sp"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"


                android:onClick="openSem2Workshop"

                android:text="@string/workshop"
                android:textColor="#040303"
                android:textSize="20sp"
                app:backgroundTint="#25BD9A"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>